--- a/src/components/sections/about/MyPersonalSideSection.astro
+++ b/src/components/sections/about/MyPersonalSideSection.astro
@@ -66,7 +66,7 @@
 
       <!-- Collage -->
       <div class="col-span-1 sm:col-span-6 lg:col-span-6 lg:row-span-2 bg-cover bg-center grayscale rounded-2xl"
-        style="background-image: url('../../../../public/collage.webp')"></div>
+        style="background-image: url('/collage.webp')"></div>
     </div>
   </div>
 </section>
